--- a/app/protected/notebooks/notebook/note/template.hbs
+++ b/app/protected/notebooks/notebook/note/template.hbs
@@ -1,4 +1,4 @@
-{{#page/page-wrapper}}
+{{#page/page-wrapper overflowY=false}}
   {{protected/notebooks/notebook/note/note-page
     class="g-bg-theme-nearWhite u-z2"
     note=model
