--- a/app/styles/base-variables/objects/objects.css
+++ b/app/styles/base-variables/objects/objects.css
@@ -43,6 +43,9 @@
   --vert-padding__text-input: 0.75em;
   --side-padding__text-input: calc( (1em * var(--line-height__text-input)) / 2 );
   --padding__text-input: var(--vert-padding__text-input) var(--side-padding__text-input);
-  
+
   --height__text-input: 3.5rem; /* TODO: Deprecate and use font-size + padding? */
+
+  /* ------------- Panels -------- */
+  --width__flyout-panel: 26rem;
 }
