--- a/app/protected/notebooks/notebook/note/note-page/chat-panel/template.hbs
+++ b/app/protected/notebooks/notebook/note/note-page/chat-panel/template.hbs
@@ -30,7 +30,9 @@
         (if (eq activeChatViewIndex 0) ' is-showing' '')
       )
     }}
-      {{protected/notebooks/notebook/note/note-page/chat-panel/message-panel}}
+      {{protected/notebooks/notebook/note/note-page/chat-panel/message-panel
+        class="u-relative u-fill-width u-fill-height"
+      }}
     {{/viewTabs.tabpanel}}
 
     {{#viewTabs.tabpanel
@@ -45,7 +47,9 @@
         (if (eq activeChatViewIndex 1) ' is-showing' '')
       )
     }}
-      {{protected/notebooks/notebook/note/note-page/chat-panel/video-panel}}
+      {{protected/notebooks/notebook/note/note-page/chat-panel/video-panel
+        class="u-relative u-fill-width u-fill-height"
+      }}
     {{/viewTabs.tabpanel}}
 
     {{#viewTabs.tabpanel
@@ -60,7 +64,9 @@
         (if (eq activeChatViewIndex 2) ' is-showing' '')
       )
     }}
-      {{protected/notebooks/notebook/note/note-page/chat-panel/settings-panel}}      
+      {{protected/notebooks/notebook/note/note-page/chat-panel/settings-panel
+        class="u-relative u-fill-width u-fill-height"
+      }}
     {{/viewTabs.tabpanel}}
 
   </section>
