slight style polish for chat panel

--- a/app/components/switchblade-menu/flyout-panels/notebooks/template.hbs
+++ b/app/components/switchblade-menu/flyout-panels/notebooks/template.hbs
@@ -33,10 +33,7 @@
 </section>
 
 {{buttons/icon-button
-  class="o-tap-target-md
-         g-border-circle
-         g-border-none
-         g-bg-theme-primary-1--700
+  class="g-bg-theme-primary-1--700
          g-nearWhite
          o-scale-up-on-hover
          g-box-shadow-2
@@ -45,6 +42,8 @@
          u-edge-bottom
          u-mr2
          u-mb2"
+  fab="true"
+  size="medium"
   stroke="currentColor"
   iconURL="/assets/icons.svg#icon_plus--stroke"
   onPressed=(action (mut isShowingNewNotebookItemForm) true)
