--- a/app/protected/notebooks/notebook/note/note-page/chat-panel/template.hbs
+++ b/app/protected/notebooks/notebook/note/note-page/chat-panel/template.hbs
@@ -32,6 +32,7 @@
     }}
       {{protected/notebooks/notebook/note/note-page/chat-panel/message-panel
         class="u-relative u-fill-width u-fill-height"
+        newChatMessage=(mut newChatMessage)
       }}
     {{/viewTabs.tabpanel}}
 
