--- a/app/components/x-text-input/template.hbs
+++ b/app/components/x-text-input/template.hbs
@@ -6,6 +6,7 @@
   placeholder={{placeholder}}
   onkeyup={{action (mut value) value='target.value'}}
   data-test-selector={{testSelector}}
+  disabled={{disabled}}
 >
 
 <label for={{fieldId}} class={{_labelClassNames}}>
