--- a/app/components/buttons/icon-button/template.hbs
+++ b/app/components/buttons/icon-button/template.hbs
@@ -1,4 +1,2 @@
-{{svg-icon
-  iconURL=iconURL stroke=stroke fill=fill strokeWidth=strokeWidth
-}}
+{{svg-icon iconURL=iconURL stroke=stroke fill=fill strokeWidth=strokeWidth}}
 {{yield}}
